the first versionddd

--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" type="text/css" href="../css/index.css">
 </head>
 <body class="text_cen">
-	<div id="top">
-		<div id="top_black" class="mar_cen cl">
+	<div class="top">
+		<div class="top_black mar_cen cl">
 			<span class="fl">
 				XX公司欢迎你
 				<!-- 1BTC≈<span class="j-btcPrice">2698.09</span>元 -->
@@ -19,7 +19,7 @@
 				<!-- <a href="#"><span class="register">注册</span></a> -->
 			</span>
 		</div>
-		<div id="top_white" class="mar_cen">
+		<div class="top_white mar_cen">
 			<div class="logo fl"></div>
 			<ul class="nav fr">
 				<li><a href="#" class="font">首页</a></li>
@@ -28,14 +28,14 @@
 			</ul>
 		</div>
 	</div>
-	<div id="banner">
-		<div id="ban_main" class="cl mar_cen">
+	<div class="banner">
+		<div class="ban_main cl mar_cen">
 			<img class="fl" src="../img/banner.png"/>
 			
 		</div>	
 	</div>
-	<div id="main" class="mar_cen">
-		<div id="halei">
+	<div class="main mar_cen">
+		<div class="halei-div">
 			<div class="halei haleiA j-haleiA">
 				<div class="posi text_l">
 					<div class="title cl">
@@ -93,7 +93,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="web_character" class="cl">
+		<div class="web_character cl">
 			<div class="cha_size">
 				<div><img src="../img/cha_img1.png"/></div>
 				<p class="font24">特点1</p>
@@ -112,13 +112,13 @@
 				<p>好好好</p>
 			</div>
 		</div>
-		<div id="process">
-			<div id="text" class="mar_cen">
+		<div class="process">
+			<div class="text mar_cen">
 				<p class="title text_l">购买流程</p>
 			</div>
 		</div>
 	</div>
-	<div id="footer" class="mar_cen">
+	<div class="footer mar_cen">
 		<img src="../img/foot_img1.png"/>
 		<img src="../img/foot_img2.png"/>
 		<img src="../img/foot_img3.png"/>
