--- a/html/production-detail.html
+++ b/html/production-detail.html
@@ -3,16 +3,24 @@
 <head>
 <title>产品详情</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- Skitter Styles -->
+<link href="../css/skitter.styles.min.css" type="text/css" media="all" rel="stylesheet" />
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/account-reset.css">
 <link rel="stylesheet" type="text/css" href="../css/production-detail.css">
+
+
+  <!-- Skitter JS -->
+  <script type="text/javascript" language="javascript" src="../js/jquery.js"></script>
+  <script type="text/javascript" language="javascript" src="../js/jquery.easing.1.3.js"></script>
+  <script type="text/javascript" language="javascript" src="../js/jquery.skitter.min.js"></script>
 </head>
 <body class="text_cen">
-	<div id="top">
-		<div id="top_black" class="mar_cen cl">
+	<div class="top">
+		<div class="top_black mar_cen cl">
 			<span class="fl">XXXXX广告语</span>
 		</div>
-		<div id="top_white" class="mar_cen">
+		<div class="top_white mar_cen">
 			<div class="logo fl"></div>
 			<ul class="nav fr">
 				<li><a href="#" class="font">首页</a></li>
@@ -21,66 +29,80 @@
 			</ul>
 		</div>
 	</div>
-	<div id="main" class="mar_cen cl">
-		<div id="mainl" class="fl">
-			<div id="contact">
+	<div class="main mar_cen cl">
+		<div class="mainl fl">
+			<div class="contact">
 				<ul>
-					<li class="title"><p>课堂学习</p></li>
-					<li class="blue"><a href=""><p><img src="../img/contact_img1.png"><span>同步教学</span></p></a></li>
-					<li><p><img src="../img/contact_img1.png"><span>语文学习</span></p></li>
-					<li><p><img src="../img/contact_img1.png"><span>数学学习</span></p></li>				
-					<li><p><img src="../img/contact_img1.png"><span>英语学习</span></p></li>				
-					<li><p><img src="../img/contact_img1.png"><span>词典大全</span></p></li>				
-					<li><p><img src="../img/contact_img1.png"><span>开心乐园</span></p></li>				
+					<li class="title"><a href=""><p>产品参数</p></a></li>			
 				</ul>
 			</div>
-			<div id="contact">
+
+			<div class="contact">
 				<ul>
-					<li class="title"><p>儿童早教</p></li>
-					<li><img src="../img/contact_img1.png"><span>客服QQ：123456789</span></li>
-					<li><img src="../img/contact_img2.png"><span>邮箱：123456@qq.com</span></li>
-					<li><img src="../img/contact_img3.png"><span>QQ群：123456789</span></li>
-					<li><img src="../img/contact_img4.png"><span>客服电话：123456789</span></li>
+					<li class="title"><a href=""><p>课堂学习</p></a></li>
+					<li class="blue"><a href=""><p><img src="../img/contact_img1.png"><span>同步教学</span></p></a></li>
+					<li><a href=""><p><img src="../img/contact_img1.png"><span>语文学习</span></p></a></li>
+					<li><a href=""><p><img src="../img/contact_img1.png"><span>数学学习</span></p></a></li>				
+					<li><a href=""><p><img src="../img/contact_img1.png"><span>英语学习</span></p></a></li>				
+					<li><a href=""><p><img src="../img/contact_img1.png"><span>词典大全</span></p></a></li>				
+					<li><a href=""><p><img src="../img/contact_img1.png"><span>开心乐园</span></p></a></li>				
+				</ul>
+			</div>
+			<div class="contact">
+				<ul>
+					<li class="title"><a href=""><p>儿童早教</p></a></li>
+					<li><a href=""><img src="../img/contact_img1.png"><span>早期学习</span></a></li>
+					<li><a href=""><img src="../img/contact_img2.png"><span>益智游戏</span></a></li>
+					<li><a href=""><img src="../img/contact_img3.png"><span>艺术熏陶</span></a></li>
+					<li><a href=""><img src="../img/contact_img4.png"><span>听说故事</span></a></li>
 				</ul>
 			</div>
 		</div>
-		<div id="mainr" class="fl">
+		<div class="mainr-big fl">
 			<div class="mainr mar_cen">
 				<div class="frame mar_cen">
-					<div class="title">基金产品详情</div>
+					<div class="title">XXX平板详情</div>
+					<div class="box_skitter box_skitter_large">
+			          <ul>
+			            <li><a href="#cube"><img src="../img/skitter/example/001.jpg" class="circles" /></a><div class="label_text"><p>cube</p></div></li>
+			            <li><a href="#cubeRandom"><img src="../img/skitter/example/002.jpg" class="circlesInside" /></a><div class="label_text"><p>cubeRandom</p></div></li>
+			            <li><a href="#block"><img src="../img/skitter/example/003.jpg" class="circlesRotate" /></a><div class="label_text"><p>block</p></div></li>
+			            <li><a href="#cubeStop"><img src="../img/skitter/example/004.jpg" class="cubeShow" /></a><div class="label_text"><p>cubeStop</p></div></li> 
+			          </ul>
+			        </div>
 					<div class="brief cl">
 						<table>
 							<tr>
-								<td class="l_nav nav fl">产品名称：</td><td class="l_content content fl">哈雷btc云挖矿分级基金A份额</td>
-								<td class="r_nav nav fl">发行人：</td><td class="r_content content fl">哈雷中国</td>
+								<td class="l_nav fl">产品名称：</td><td class="l_content content fl">哈雷btc云挖矿分级基金A份额</td>
+								<td class="r_nav fl">发行人：</td><td class="r_content content fl">哈雷中国</td>
 							</tr>
 							<tr>
-								<td class="l_nav nav fl">收益类型：</td><td class="l_content content fl">非本固定收益</td>
-								<td class="r_nav nav fl">风险系数：</td><td class="r_content content fl">低</td>
+								<td class="l_nav fl">收益类型：</td><td class="l_content content fl">非本固定收益</td>
+								<td class="r_nav fl">风险系数：</td><td class="r_content content fl">低</td>
 							</tr>
 							<tr>
-								<td class="l_nav nav fl">发行规模：</td><td class="l_content content fl">3,000,000</td>
-								<td class="r_nav nav fl">每份价格：</td><td class="r_content content fl">3000人民币</td>
+								<td class="l_nav fl">发行规模：</td><td class="l_content content fl">3,000,000</td>
+								<td class="r_nav fl">每份价格：</td><td class="r_content content fl">3000人民币</td>
 							</tr>
 							<tr>
-								<td class="l_nav nav fl">产品份额：</td><td class="l_content content fl">1000份</td>
-								<td class="r_nav nav fl">剩余份额：</td><td class="r_content content fl">1000份</td>
+								<td class="l_nav fl">产品份额：</td><td class="l_content content fl">1000份</td>
+								<td class="r_nav fl">剩余份额：</td><td class="r_content content fl">1000份</td>
 							</tr>
 							<tr>
-								<td class="l_nav nav fl">销售开始日期：</td><td class="l_content content fl">2014-11-25</td>
-								<td class="r_nav nav fl">销售结束日期：</td><td class="r_content content fl">2014-06-09</td>
+								<td class="l_nav fl">销售开始日期：</td><td class="l_content content fl">2014-11-25</td>
+								<td class="r_nav fl">销售结束日期：</td><td class="r_content content fl">2014-06-09</td>
 							</tr>
 							<tr>
-								<td class="l_nav nav fl">收益开始日期：</td><td class="l_content content fl">2014-11-26</td>
-								<td class="r_nav nav fl">收益结束结束：</td><td class="r_content content fl">xxxx-xxxx-xx</td>
+								<td class="l_nav fl">收益开始日期：</td><td class="l_content content fl">2014-11-26</td>
+								<td class="r_nav fl">收益结束结束：</td><td class="r_content content fl">xxxx-xxxx-xx</td>
 							</tr>
 
 							<tr>
-								<td class="l_nav nav fl">投资周期：</td><td class="l_content content fl">永续型，在满足约定条件时进行退出清算</td>
-								<td class="r_nav nav fl">预期收益（年化）：</td><td class="r_content content fl">10%</td>
+								<td class="l_nav fl">投资周期：</td><td class="l_content content fl">永续型，在满足约定条件时进行退出清算</td>
+								<td class="r_nav fl">预期收益（年化）：</td><td class="r_content content fl">10%</td>
 							</tr>
 							<tr>
-								<td class="l_nav nav fl">分红周期：</td><td class="l_content content fl">每天</td>
+								<td class="l_nav fl">分红周期：</td><td class="l_content content fl">每天</td>
 							</tr>
 						</table>
 					</div>
@@ -124,34 +146,12 @@
 					</div>
 				</div>
 				<div class="manage">
-					<div class="title text_l">哈雷云平台的管理收益：</div>
-					<div class="nav cl">
-						<div class="nav1 text_cen fl">挂钩收益</div>
-						<div class="nav2 text_cen fl">哈雷云财富提取收益</div>
-						<div class="nav3 text_cen fl">例子</div>
-					</div>
-					<ul>
-						<li class="cl">
-							<div class="content1">≥35</div>
-							<div class="content2">5%</div>
-							<div class="content3">挂钩收益为<span>35</span>时，计算分红的挂钩收益以<span>40*95%=38</span>计算</div>
-						</li>
-						<li class="cl">
-							<div class="content1">≥50</div>
-							<div class="content2">10%</div>
-							<div class="content3">挂钩收益为<span>50</span>时，计算分红的挂钩收益以<span>50*90%=45</span>计算</div>
-						</li>
-						<li class="cl">
-							<div class="content1">≥65</div>
-							<div class="content2">15%</div>
-							<div class="content3">挂钩收益为<span>65</span>时，计算分红的挂钩收益以<span>80*85%=68</span>计算</div>
-						</li>
-					</ul>
+
 				</div>
 			</div>
 		</div>
 	</div>
-	<div id="footer">
+	<div class="footer">
 		<div class="link mar_cen text_l">
 			<p>友情链接:&nbsp;
 				<a href="#">巴比特</a>
@@ -194,7 +194,19 @@
 			</ul>
 		</div>
 	</div>
-	<script src="../js/jquery.js"></script>
-	<script src="../js/security.js"></script>
+
+	<!-- Init Skitter -->
+  <script type="text/javascript" language="javascript">
+    $(document).ready(function() {
+      $('.box_skitter_large').skitter({
+        theme: 'clean',
+        numbers_align: 'center',
+        progressbar: true, 
+        enable_navigation_keys: true,
+        dots: true, 
+        preview: true
+      });
+    });
+  </script>
 </body>
 </html>
