--- a/html/production-detail.html
+++ b/html/production-detail.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" language="javascript" src="../js/jquery.easing.1.3.js"></script>
   <script type="text/javascript" language="javascript" src="../js/jquery.skitter.min.js"></script>
 </head>
-<body class="text_cen">
+<body>
 	<div class="top">
 		<div class="top_black mar_cen cl">
 			<span class="fl">XXXXX广告语</span>
@@ -145,8 +145,17 @@
 						</p>
 					</div>
 				</div>
-				<div class="manage">
 
+				<!-- -----图文功能介绍---------- -->
+				<div class="manage">
+					<div style="width:700px;">
+						<p class="big-title">这个平板很好</p>
+						<img src="../img/main1.png" alt="" style="width:700px;">
+					</div>
+					<div style="width:700px;">
+						<p class="big-title">这个平板很好</p>
+						<img src="../img/main1.png" alt="" style="width:700px;">
+					</div>
 				</div>
 			</div>
 		</div>
