删除不必要的css和html

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,6 @@
 		<div class="top_black mar_cen cl">
 			<span class="fl">
 				XX公司欢迎你
-				<!-- 1BTC≈<span class="j-btcPrice">2698.09</span>元 -->
 			</span>
 			<!--加了j-前缀的class表示在js中使用，在css中不使用该class-->
 			<span class="fr text_r">
@@ -22,8 +21,8 @@
 		<div class="top_white mar_cen">
 			<div class="logo fl"></div>
 			<ul class="nav fr">
-				<li><a href="#" class="font">首页</a></li>
-				<li><a href="#" class="font">产品</a></li>
+				<li><a href="index.html" class="font">首页</a></li>
+				<li><a href="production-detail.html" class="font">产品</a></li>
 				<li class="lastx"><a href="#" class="font">公司简介</a></li>
 			</ul>
 		</div>
