--- a/html/production-detail.html
+++ b/html/production-detail.html
@@ -23,8 +23,8 @@
 		<div class="top_white mar_cen">
 			<div class="logo fl"></div>
 			<ul class="nav fr">
-				<li><a href="#" class="font">首页</a></li>
-				<li><a href="#" class="font">产品</a></li>
+				<li><a href="index.html" class="font">首页</a></li>
+				<li><a href="production-detail.html" class="font">产品</a></li>
 				<li class="lastx"><a href="#" class="font">公司简介</a></li>
 			</ul>
 		</div>
