finish the sample home page

--- a/html/production-detail.html
+++ b/html/production-detail.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../css/reset.css">
 <link rel="stylesheet" type="text/css" href="../css/account-reset.css">
 <link rel="stylesheet" type="text/css" href="../css/production-detail.css">
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 
   <!-- Skitter JS -->
@@ -17,17 +18,11 @@
 </head>
 <body>
 	<div class="top">
-		<div class="top_black mar_cen cl">
-			<span class="fl">XXXXX广告语</span>
-		</div>
-		<div class="top_white mar_cen">
-			<div class="logo fl"></div>
-			<ul class="nav fr">
-				<li><a href="index.html" class="font">首页</a></li>
-				<li><a href="production-detail.html" class="font">产品</a></li>
-				<li class="lastx"><a href="#" class="font">公司简介</a></li>
-			</ul>
-		</div>
+		<ul id="nav">
+    		<li><a href="index.html">首页</a></li>
+    		<li class="active"><a href="production-detail.html">产品介绍</a></li>
+    		<li><a href="http://www.divcss5.com/rumen/">公司简介</a></li>
+		</ul>
 	</div>
 	<div class="main mar_cen cl">
 		<div class="mainl fl">
