修改首页文案

--- a/html/production-detail-a.html
+++ b/html/production-detail-a.html
@@ -17,8 +17,8 @@
   <script type="text/javascript" language="javascript" src="../js/jquery.skitter.min.js"></script>
 </head>
 <body>
-	<div class="top">
-		<ul id="nav">
+	<div class="top" style="background: #088AE0;">
+		<ul class="nav">
     		<li><a href="index.html">首页</a></li>
     		<li class="active"><a href="production-detail.html">产品介绍</a></li>
     		<li><a href="http://www.divcss5.com/rumen/">公司简介</a></li>
