增加产品详情

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <title>首页</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<link rel="stylesheet" type="text/css" href="../css/reset.css">
-<link rel="stylesheet" type="text/css" href="../css/index.css">
-<link href="../css/skitter.styles.min.css" type="text/css" media="all" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="css/reset.css">
+<link rel="stylesheet" type="text/css" href="css/index.css">
+<link href="css/skitter.styles.min.css" type="text/css" media="all" rel="stylesheet" />
 
 
-<script src="../js/jquery-1.11.3.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -19,20 +19,20 @@
 			<div class="logo fl"></div>
 			<ul class="nav fr">
 				<li><a href="index.html" class="font">首页</a></li>
-				<li><a href="production-detail-a.html" class="font">产品</a></li>
+				<li><a href="pad-detail.html" class="font">产品</a></li>
 				<li class="lastx"><a href="#" class="font">公司简介</a></li>
 			</ul>
 		</div>
 	</div> 
 	<div class="banner">
 		<div class="ban_main cl mar_cen">
-			<!-- <img class="fl" src="../img/banner.png"/> -->
+			<!-- <img class="fl" src="img/banner.png"/> -->
 			<div class="box_skitter box_skitter_large" style="width: 1024px; height: 380px;">
 	          <ul>
-	            <li><a href="#cube"><img src="../img/banner0.png" class="circles" /></a><div class="label_text"><p>量子学习平板L-100</p></div></li>
-	            <li><a href="#cubeRandom"><img src="../img/banner1.png" class="circlesInside" /></a><div class="label_text"><p>量子学习平板L-100</p></div></li>
-	            <li><a href="#block"><img src="../img/banner2.png" class="circlesRotate" /></a><div class="label_text"><p>量子早教平板L-101</p></div></li>
-				<li><a href="#block"><img src="../img/banner3.png" class="circlesRotate" /></a><div class="label_text"><p>量子娱乐办公平板L-102</p></div></li>
+	            <li><a href="#cube"><img src="img/banner0.png" class="circles" /></a><div class="label_text"><p>量子学习平板L-100</p></div></li>
+	            <li><a href="#cubeRandom"><img src="img/banner1.png" class="circlesInside" /></a><div class="label_text"><p>量子学习平板L-100</p></div></li>
+	            <li><a href="#block"><img src="img/banner2.png" class="circlesRotate" /></a><div class="label_text"><p>量子早教平板L-101</p></div></li>
+				<li><a href="#block"><img src="img/banner3.png" class="circlesRotate" /></a><div class="label_text"><p>量子娱乐办公平板L-102</p></div></li>
 	          </ul>
 	        </div>
 		</div>	
@@ -43,10 +43,10 @@
 				<div class="posi text_l">
 					<div class="title cl">
 						<span>学习平板L-100</span><br/>
-						<a href="production-detail-a.html"><img src="../img/checkdetail.png"/></a>
+						<a href="pad-detail.html"><img src="img/checkdetail.png"/></a>
 					</div>
 					<div class="abstruct" style="height:356px;">
-						<img src="../img/main1.png" alt="" style="width:294px;">
+						<img src="img/main1.png" alt="" style="width:294px;">
 						<p>九门功课同步学习</p>
 						<p>英语作文自动纠错</p>
 						<p>百万题目一拍即得</p>
@@ -63,10 +63,10 @@
 				<div class="posi text_l">
 					<div class="title cl">
 						<span>早教平板L-101</span><br/>
-						<a href="#"><img src="../img/checkdetail.png"/></a>
+						<a href="#"><img src="img/checkdetail.png"/></a>
 					</div>
 					<div class="abstruct" style="height:356px;">
-						<img src="../img/main2.png" alt="" style="width:294px;">
+						<img src="img/main2.png" alt="" style="width:294px;">
 						<p>过滤蓝光极致护眼</p>
 						<p>儿童早教专用软件</p>
 						<p>学习娱乐智能结合</p>
@@ -81,11 +81,11 @@
 				<div class="posi text_l">
 					<div class="title cl">
 						<span>娱乐办公平板L-102</span><br/>
-						<a href="#"><img src="../img/checkdetail.png"/></a>
+						<a href="#"><img src="img/checkdetail.png"/></a>
 					</div>
 					<div class="abstruct" style="height:356px;">
 						
-						<img src="../img/main3.png" alt="" style="width:294px;">
+						<img src="img/main3.png" alt="" style="width:294px;">
 						<p>豪华顶级配置</p>
 						<p>IPS护眼大屏</p>
 						<p>随时随地娱乐办公</p>
@@ -98,25 +98,25 @@
 	
 		<div class="col-xs-12 footer" >
 			<div class="col-xs-3 ft_wrap">
-				<img src="../img/foot_img1.png"/>
+				<img src="img/foot_img1.png"/>
 			</div>
 			<div class="col-xs-3 ft_wrap">
-				<img src="../img/foot_img2.png"/>
+				<img src="img/foot_img2.png"/>
 			</div>
 			<div class="col-xs-3 ft_wrap">
-				<img src="../img/foot_img3.png"/>
+				<img src="img/foot_img3.png"/>
 			</div>
 			<div class="col-xs-3 ft_wrap">
-				<img src="../img/foot_img4.png"/>
+				<img src="img/foot_img4.png"/>
 			</div>
 		</div>
 	</div>
 	
-	<script src="../js/jquery.js"></script>
-	<script src="../js/util.js"></script>
-	<script src="../js/index.js"></script>
-	<script type="text/javascript" language="javascript" src="../js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" language="javascript" src="../js/jquery.skitter.min.js"></script>	<script type="text/javascript" language="javascript">
+	<script src="js/jquery.js"></script>
+	<script src="js/util.js"></script>
+	<script src="js/index.js"></script>
+	<script type="text/javascript" language="javascript" src="js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" language="javascript" src="js/jquery.skitter.min.js"></script>	<script type="text/javascript" language="javascript">
     $(document).ready(function() {
       $('.box_skitter_large').skitter({
         theme: 'clean',
